Added household size attr

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <option value="population density">population density</option>
             <option value="area">area</option>
             <option value="GDP/capita">GDP/capita</option>
+            <option value="household size">household size</option>
             <option value="diesel price">diesel price</option>
             <option value="gas price">gas price</option>
             <option value="HDD 15.5C">HDD 15.5C</option>
@@ -342,6 +343,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
     // "GDP/capita" : d3.extent(ghg, function (d) { return +d["GDP-PPP combined"]/d["pop to use"]*Math.pow(10,9);})
     "measurement year": [2005, 2015], 
     "GDP/capita": [1700, 128046],
+    "household size": [2, 4],
     "diesel price": [0.5, 1.8],
     "gas price": [0.5, 1.8],
     "HDD 15.5C": [0, 3000], "CDD 23C": [0, 1000], //FMB
