--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <!-- header row -->
     <div class="row">     
-      <div class="col-lg-7 headings" style="text-align: center; left:307px;">
-        Cities that reported emissions to the Carbon Disclosure Project
+      <div class="col-lg-7 headings" style="text-align: center; left:280px;">
+        Cities that reported emissions to CDP
       </div>
     </div> <!-- ./header row -->
 
