footer logo blanked out

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div> <!-- .end col -->
     </div> <!-- .end row -->
     
-    <footer class="row">
+    <footer class="row" id="footerID">
       logos
     </footer>
 
